--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
         android:layout_marginLeft="16dp"
         android:hint="Tên đăng nhập của nhân viên"
         android:textColor="@color/white"
-        android:textColorHint="@color/purple_200"
+        android:textColorHint="@color/white"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
