--- a/app/src/main/res/layout/my_row.xml
+++ b/app/src/main/res/layout/my_row.xml
@@ -64,9 +64,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="USA"
-                android:textSize="12sp"
+                android:text="place"
                 android:textColor="@color/purple_500"
+                android:textSize="12sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/candyname"
                 app:layout_constraintTop_toBottomOf="@+id/candyname" />
