--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,10 +22,10 @@
 
     <EditText
         android:id="@+id/loginadminusernametxt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_width="411dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:hint="Tên đăng nhập của nhân viên"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
@@ -58,8 +58,8 @@
 
     <TextView
         android:id="@+id/usernameloginadminlbl"
-        android:layout_width="331dp"
-        android:layout_height="53dp"
+        android:layout_width="267dp"
+        android:layout_height="41dp"
         android:layout_marginBottom="24dp"
         android:text="tên đăng nhập"
         android:textAllCaps="true"
@@ -67,6 +67,7 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/loginadminusernametxt"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.662"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
